--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
+<!--    <TextView
         android:id="@+id/textView3"
         android:layout_width="180dp"
         android:layout_height="54dp"
@@ -13,12 +13,56 @@
         android:text="Your Ideas"
         android:textColor="@android:color/black"
         android:textSize="36sp" />
+-->
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/appbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingTop="@dimen/appbar_padding_top"
+        android:theme="@style/AppTheme.NoActionBar">
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="180dp"
+            android:layout_height="54dp"
+            android:layout_marginLeft="120dp"
+            android:text="Your Ideas"
+            android:textColor="@android:color/black"
+            android:textSize="36sp" />
+
+        <android.support.design.widget.TabLayout
+            android:id="@+id/tabs"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+    </android.support.design.widget.AppBarLayout>
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+
+
+<!--
+    <android.support.design.widget.TabLayout
+        android:id="@+id/tabLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:tabGravity="fill"
+        android:layout_marginTop="50dp">
+    </android.support.design.widget.TabLayout>
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewPager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    </android.support.v4.view.ViewPager>
 
     <ScrollView
         android:id="@+id/scroll"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="60dp">
+        android:layout_width="298dp"
+        android:layout_height="221dp"
+        android:layout_marginTop="200dp">
 
         <LinearLayout
             android:id="@+id/linearLayout"
@@ -30,122 +74,123 @@
                 android:id="@+id/textView4"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:onClick="goToEditView"
                 android:tag="0"
                 android:text=""
-                android:onClick="goToEditView"
                 android:textSize="40sp" />
 
             <TextView
                 android:id="@+id/textView5"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:onClick="goToEditView"
                 android:tag="1"
                 android:text=""
-                android:onClick="goToEditView"
                 android:textSize="40sp" />
 
             <TextView
                 android:id="@+id/textView6"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:onClick="goToEditView"
                 android:tag="2"
                 android:text=""
-                android:onClick="goToEditView"
                 android:textSize="40sp" />
 
             <TextView
                 android:id="@+id/textView7"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:onClick="goToEditView"
                 android:tag="3"
                 android:text=""
-                android:onClick="goToEditView"
                 android:textSize="40sp" />
 
             <TextView
                 android:id="@+id/textView8"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:onClick="goToEditView"
                 android:tag="4"
                 android:text=""
-                android:onClick="goToEditView"
                 android:textSize="40sp" />
 
             <TextView
                 android:id="@+id/textView9"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:onClick="goToEditView"
                 android:tag="5"
                 android:text=""
-                android:onClick="goToEditView"
                 android:textSize="40sp" />
 
             <TextView
                 android:id="@+id/textView10"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:onClick="goToEditView"
                 android:tag="6"
                 android:text=""
-                android:onClick="goToEditView"
                 android:textSize="40sp" />
 
             <TextView
                 android:id="@+id/textView11"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:onClick="goToEditView"
                 android:tag="7"
                 android:text=""
-                android:onClick="goToEditView"
                 android:textSize="40sp" />
 
             <TextView
                 android:id="@+id/textView12"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:onClick="goToEditView"
                 android:tag="8"
                 android:text=""
-                android:onClick="goToEditView"
                 android:textSize="40sp" />
 
             <TextView
                 android:id="@+id/textView13"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:onClick="goToEditView"
                 android:tag="9"
                 android:text=""
-                android:onClick="goToEditView"
                 android:textSize="40sp" />
 
             <TextView
                 android:id="@+id/textView14"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:onClick="goToEditView"
                 android:tag="10"
                 android:text=""
-                android:onClick="goToEditView"
                 android:textSize="40sp" />
 
             <TextView
                 android:id="@+id/textView15"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:onClick="goToEditView"
                 android:tag="11"
                 android:text=""
-                android:onClick="goToEditView"
                 android:textSize="40sp" />
 
             <TextView
                 android:id="@+id/textView16"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:onClick="goToEditView"
                 android:tag="12"
                 android:text=""
-                android:onClick="goToEditView"
                 android:textSize="40sp" />
 
 
         </LinearLayout>
     </ScrollView>
+-->
 
     <ImageButton
         android:id="@+id/imageButton"
@@ -154,12 +199,5 @@
         android:layout_marginLeft="350dp"
         android:onClick="addIdeas"
         app:srcCompat="@android:drawable/ic_input_add" />
-
-    <ImageButton
-        android:id="@+id/imageButton2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="eraseAll"
-        app:srcCompat="@android:drawable/btn_dialog" />
 
 </RelativeLayout>
