--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,162 +42,12 @@
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
-
-<!--
-    <android.support.design.widget.TabLayout
-        android:id="@+id/tabLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:tabGravity="fill"
-        android:layout_marginTop="50dp">
-    </android.support.design.widget.TabLayout>
-
-    <android.support.v4.view.ViewPager
-        android:id="@+id/viewPager"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    </android.support.v4.view.ViewPager>
-
-    <ScrollView
-        android:id="@+id/scroll"
-        android:layout_width="298dp"
-        android:layout_height="221dp"
-        android:layout_marginTop="200dp">
-
-        <LinearLayout
-            android:id="@+id/linearLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/textView4"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:onClick="goToEditView"
-                android:tag="0"
-                android:text=""
-                android:textSize="40sp" />
-
-            <TextView
-                android:id="@+id/textView5"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:onClick="goToEditView"
-                android:tag="1"
-                android:text=""
-                android:textSize="40sp" />
-
-            <TextView
-                android:id="@+id/textView6"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:onClick="goToEditView"
-                android:tag="2"
-                android:text=""
-                android:textSize="40sp" />
-
-            <TextView
-                android:id="@+id/textView7"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:onClick="goToEditView"
-                android:tag="3"
-                android:text=""
-                android:textSize="40sp" />
-
-            <TextView
-                android:id="@+id/textView8"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:onClick="goToEditView"
-                android:tag="4"
-                android:text=""
-                android:textSize="40sp" />
-
-            <TextView
-                android:id="@+id/textView9"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:onClick="goToEditView"
-                android:tag="5"
-                android:text=""
-                android:textSize="40sp" />
-
-            <TextView
-                android:id="@+id/textView10"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:onClick="goToEditView"
-                android:tag="6"
-                android:text=""
-                android:textSize="40sp" />
-
-            <TextView
-                android:id="@+id/textView11"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:onClick="goToEditView"
-                android:tag="7"
-                android:text=""
-                android:textSize="40sp" />
-
-            <TextView
-                android:id="@+id/textView12"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:onClick="goToEditView"
-                android:tag="8"
-                android:text=""
-                android:textSize="40sp" />
-
-            <TextView
-                android:id="@+id/textView13"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:onClick="goToEditView"
-                android:tag="9"
-                android:text=""
-                android:textSize="40sp" />
-
-            <TextView
-                android:id="@+id/textView14"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:onClick="goToEditView"
-                android:tag="10"
-                android:text=""
-                android:textSize="40sp" />
-
-            <TextView
-                android:id="@+id/textView15"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:onClick="goToEditView"
-                android:tag="11"
-                android:text=""
-                android:textSize="40sp" />
-
-            <TextView
-                android:id="@+id/textView16"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:onClick="goToEditView"
-                android:tag="12"
-                android:text=""
-                android:textSize="40sp" />
-
-
-        </LinearLayout>
-    </ScrollView>
--->
-
-    <ImageButton
-        android:id="@+id/imageButton"
-        android:layout_width="70dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="350dp"
-        android:onClick="addIdeas"
-        app:srcCompat="@android:drawable/ic_input_add" />
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fabAddIdea"
+        android:layout_width="86dp"
+        android:layout_height="77dp"
+        android:layout_marginLeft="310dp"
+        android:layout_marginTop="640dp"
+        android:src="@android:drawable/ic_input_add" />
 
 </RelativeLayout>
