--- a/app/src/main/res/layout/fragment_forfun.xml
+++ b/app/src/main/res/layout/fragment_forfun.xml
@@ -7,7 +7,8 @@
     <ListView
         android:id="@+id/listView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_marginTop="115dp"/>
 
     <TextView
         android:layout_width="wrap_content"
