--- a/app/src/main/res/layout/fragment_unlisted.xml
+++ b/app/src/main/res/layout/fragment_unlisted.xml
@@ -4,20 +4,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:layout_marginTop="40dp"
-        android:text="Unlisted"
-        android:textSize="25sp"
-        android:visibility="invisible" />
-
     <ListView
         android:id="@+id/listView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_marginTop="115dp"
+        />
+    <!-- android:paddingTop="115dp"-->
 
 
 </RelativeLayout>
