--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,10 +44,11 @@
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fabAddIdea"
-        android:layout_width="86dp"
-        android:layout_height="77dp"
+        android:layout_width="90dp"
+        android:layout_height="65dp"
         android:layout_marginLeft="310dp"
         android:layout_marginTop="640dp"
-        android:src="@android:drawable/ic_input_add" />
+        android:src="@android:drawable/ic_input_add"
+        />
 
 </RelativeLayout>
