--- a/app/src/main/res/layout/idea_item.xml
+++ b/app/src/main/res/layout/idea_item.xml
@@ -21,16 +21,17 @@
             android:text="TextViewaksdjnfaskjdfnaskldjnfaksdjfnklasjnkasjdnfaksjdfklasjnfkasjdnfkajsdnfksandfkjasndkfjnaskdjnfkasjdnfskajnf"
             android:textSize="16sp" />
 
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="23dp"
-            android:layout_height="30dp"
+        <ImageButton
+            android:id="@+id/btnMenu"
+            android:layout_width="20dp"
+            android:layout_height="26dp"
             android:layout_marginTop="20dp"
             android:layout_marginRight="10sp"
-            app:srcCompat="@drawable/menu" />
+            app:srcCompat="@drawable/menusmaller" />
     </LinearLayout>
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="#DFDBDB"/>
+
     </RelativeLayout>
